Continued to structure HTML, added class name to article element, added picture sources and included card text in correct areas of the card - I believe HTML is complete at this point but may have further revisions

--- a/index.html
+++ b/index.html
@@ -15,32 +15,25 @@
 
 <body>
   <main>
-    <article>
-      <picture></picture>
+    <article class="product-card">
+      <picture>
+        <source srcset="./images/image-product-desktop.jpg" media="(min-width: 640px)">
+        <img src="./images/image-product-mobile.jpg"
+          alt="Gabrielle Essence Parfum bottle laying down with leaves surrounding">
+      </picture>
       <div class="card-text">
-        <p class="product-type"></p>
-        <h1 class="product-name"></h1>
-        <p class="product-info"></p>
+        <p class="product-type">Perfume</p>
+        <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
+        <p class="product-info">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          Perfumer-Creator for the House of CHANEL.</p>
       </div>
       <div class="card-price">
-        <p class="discounted-price"></p>
-        <p class="original-price"></p>
+        <p class="discounted-price">$149.99</p>
+        <p class="original-price">$169.99</p>
       </div>
-      <button class="card-button"></button>
+      <button class="card-button">Add to Cart</button>
     </article>
   </main>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge,
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
