--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           Perfumer-Creator for the House of CHANEL.</p>
         <div class="card-price">
           <p class="discounted-price">$149.99</p>
-          <p class="original-price">$169.99</p>
+          <del>
+            <p>$169.99</p>
+          </del>
         </div>
         <button class="card-button"><svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -38,11 +40,12 @@
       </div>
     </article>
   </main>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.keithmckenna.com">&lt; S|W|D /&gt;</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.keithmckenna.com">&lt; S|W|D /&gt;</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
